# bluesky-profile-sentiment-analysis

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: update_llamaagent_deployment.yml
app/: go.mod  main.go
app/commons/: commons.go
app/handlers/: handlers.go
app/templates/: analysis.templ  analysis_templ.go  errorBanner_templ.go  home.templ  home_templ.go  navbar.templ  navbar_templ.go
src/bluesky_profile_sentiment_analysis/: main.py
src/bluesky_profile_sentiment_analysis/utils/: __init__.py  bsky_posts.py  models.py  sentiment_analysis.py
